gcc/testsuite/algol68/compile/error-selector-1.a68
{ dg-options "-std=algol68" }

begin mode Foo = struct (int a,b);
      a'b; { dg-error "unworthy" }
      skip
end
